--- a/JavaScript/e-commerce2022/client/media/index.html
+++ b/JavaScript/e-commerce2022/client/media/index.html
@@ -8,9 +8,13 @@
         <title>Document</title>
     </head>
     <body>
+        <!-- shop content -->
         <div class="card-products-container">
             <div class="card-products" id="shopContent"></div>
         </div>
+
+        <!-- cart button -->
+        <div class="cart-btn" id="cart-btn">🛒</div>
 
         <script src="/client/js/products.js"></script>
         <script src="/client/js/index.js"></script>
