--- a/JavaScript/e-commerce2022/client/media/index.html
+++ b/JavaScript/e-commerce2022/client/media/index.html
@@ -16,7 +16,12 @@
         <!-- cart button -->
         <div class="cart-btn" id="cart-btn">🛒</div>
 
-        <script src="/client/js/products.js"></script>
-        <script src="/client/js/index.js"></script>
+        <!-- modal -->
+        <div class="modal-overlay" id="modal-overlay"></div>
+        <div class="modal-container" id="modal-container"></div>
+
+        <script src="js/products.js"></script>
+        <script src="js/index.js"></script>
+        <script src="js/cart.js"></script>
     </body>
 </html>
