--- a/JavaScript/e-commerce2022/client/index.html
+++ b/JavaScript/e-commerce2022/client/index.html
@@ -15,6 +15,8 @@
 
         <!-- cart button -->
         <div class="cart-btn" id="cart-btn">🛒</div>
+        <!-- cart counter -->
+        <span class="cart-counter" id="cart-counter">0</span>
 
         <!-- modal -->
         <div class="modal-overlay" id="modal-overlay"></div>
